Corrects spacing issue of body region hiding behind top bar.

--- a/themes/custom/metallic/css/metallic.css
+++ b/themes/custom/metallic/css/metallic.css
@@ -9376,22 +9376,27 @@ body.toolbar-fixed.toolbar-horizontal {
   padding-top: 8em !important;
 }
 
-/* line 62, ../scss/base/_drupal.scss */
+/* line 60, ../scss/base/_drupal.scss */
+body {
+  margin-top: 5.25em;
+}
+
+/* line 67, ../scss/base/_drupal.scss */
 .top-bar .menu-item--collapsed, .top-bar .menu-item--expanded {
   list-style: none;
 }
 
-/* line 70, ../scss/base/_drupal.scss */
+/* line 75, ../scss/base/_drupal.scss */
 .top-bar .search-block-form .form-item-keys, .top-bar .search-block-form .form-actions {
   display: inline-block;
 }
 
-/* line 77, ../scss/base/_drupal.scss */
+/* line 82, ../scss/base/_drupal.scss */
 .dropbutton-wrapper {
   background-color: #008CBA;
   margin: 0 0 1.25rem;
 }
-/* line 81, ../scss/base/_drupal.scss */
+/* line 86, ../scss/base/_drupal.scss */
 .dropbutton-wrapper .button {
   margin-bottom: 0;
   width: 100%;
