--- a/themes/custom/metallic/scss/base/_drupal.scss
+++ b/themes/custom/metallic/scss/base/_drupal.scss
@@ -56,6 +56,11 @@ body.toolbar-fixed.toolbar-horizontal {
     padding-top: 8em !important;
 }
 
+// Offset the body when logged out.
+body {
+    margin-top: 5.25em;
+}
+
 // Removes core arrow image from menu items.
 
 .top-bar {
